changes on latest release, added animation and fixed flexbox on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,18 @@ img {
   padding: 15px;
   max-width: 200rem;
   display: flex;
-  flex-direction: row;
+  align-items: center; /* Centrar verticalmente */
+  animation: fadeInUp 0.5s ease-in forwards;
+}
+@media (min-width: 1200px) {
+  .discography__latest-single.card {
+    flex-direction: row;
+  }
+}
+@media (max-width: 767px) {
+  .discography__latest-single.card {
+    flex-direction: column;
+  }
 }
 .discography__latest-single.card:hover {
   transform: scale(1.05);
@@ -195,9 +206,17 @@ img {
   height: 250px;
   object-fit: cover;
 }
+.discography__latest-single.card .card-img-top:active {
+  animation: shake 0.8s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+}
 .discography__latest-single.card .card-body {
   display: flex;
   align-items: center;
+}
+@media (max-width: 767px) {
+  .discography__latest-single.card .card-body {
+    flex-direction: column;
+  }
 }
 .discography__latest-single.card .card-body .card-text {
   text-align: left;
@@ -314,6 +333,27 @@ img {
   filter: blur(2px);
 }
 
+@keyframes fadeInDown {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes shake {
+  0%, 100% {
+    transform: translateX(0);
+  }
+  10%, 30%, 50%, 70%, 90% {
+    transform: translateX(-10px);
+  }
+  20%, 40%, 60%, 80% {
+    transform: translateX(10px);
+  }
+}
 .contact-form-section {
   padding: 2rem 0;
   background-color: #f8f9fa;
