--- a/scss/pages/_discography.scss
+++ b/scss/pages/_discography.scss
@@ -19,11 +19,22 @@
       padding: 15px;
       max-width: 200rem;
       display: flex;
-      flex-direction: row;
+      align-items: center; /* Centrar verticalmente */
+      animation: fadeInUp 0.5s ease-in forwards;
+
+      @include lg {
+        flex-direction: row;
+      }
+      @include xs {
+        flex-direction: column;
+      }
 
       &:hover {
         transform: scale(1.05);
       }
+   
+
+
 
 
       .card-img-top {
@@ -31,11 +42,19 @@
         width: 250px;
         height: 250px;
         object-fit: cover;
+        &:active {
+          animation: shake 0.8s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+        }
+
       }
 
       .card-body {
         display: flex;
         align-items: center;
+
+        @include xs {
+          flex-direction: column;
+        }
 
         .card-text {
           text-align: left;
@@ -181,4 +200,28 @@
      } 
     }
  
+}
+
+@keyframes fadeInDown {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
+@keyframes shake {
+  0%, 100% {
+    transform: translateX(0);
+  }
+  10%, 30%, 50%, 70%, 90% {
+    transform: translateX(-10px);
+  }
+  20%, 40%, 60%, 80% {
+    transform: translateX(10px);
+  }
 }
